--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -24,7 +24,7 @@
                     <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by / Comment'" filter="{'comment':'text'}" sortable="'comment'">
                         <h2 ng-if="::o.isAnonymous" class="comment-title">Anonymous</h2>
                         <h2 ng-if="::!o.isAnonymous" class="comment-title">{{ ::o.author }}</h2>
-                        <div ng-init="toggleProject.desc = (false)">
+                        <div ng-if="o.comment" ng-init="toggleProject.desc = (false)">
                             <p class="comment">{{ ::o.comment | maxWords: 20 }}</p>
                         </div>
                     </td>
