--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -1,6 +1,9 @@
 
 <div class="modal-header">
-	<h3 class="modal-title">Link Documents</h3>
+	<!-- MEM -->
+	<h3 ng-if="!docLinkModal.docLocationCode" class="modal-title">Link Documents</h3>
+	<!-- EAO -->
+	<h3 ng-if="docLinkModal.docLocationCode" class="modal-title">Link Documents: {{docLinkModal.artifact.name}} ({{docLinkModal.docLocationCode | displayFriendlyCode}})</h3>
 </div>
 
 <div class="modal-body">
