--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -1,72 +1,59 @@
-<div class="edit-valued-component-view"></div>
+<div class="edit-valued-component-view">
 
 	<div class="view-title-container">
-		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Add/Edit Valued Component</h1>
+		<h1><span ng-show="project.name">Edit Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}}</h1>
 	</div>
 
 	<div class="view-body-container">
-		<div class="row hidden">
-			<div class="col-sm-12 text-right">
-				<a class="btn btn-xs btn-link" ui-sref="p.vc.list">Cancel</a>
-				<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
+		
+		<div class="row">
+			<div class="col-md-4 form-group">
+				<label for="title" class="control-label">Title</label>
+				<input id="title" type="text" class="form-control" ng-model="vc.title">
+			</div>
+			<div class="col-md-4 form-group">
+				<label for="pillar" class="control-label">Pillar</label>
+				<select ng-change="selectTopic(pillar)" id="pillar"
+					ng-model='vc.pillar'
+					ng-options="pillar as pillar for pillar in pillars"
+					class="form-control">
+				</select>
+			</div>
+			<div class="col-md-4 form-group">
+				<label for="title" class="control-label">Name</label>
+				<input id="title" type="text" class="form-control" ng-model="vc.name" disabled="disabled">
 			</div>
 		</div>
-		<div class="row">
+
+		<div class="row form-group">
 			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="title" class="control-label">Name</label>
-					<input id="title" type="text" class="form-control input-sm" ng-model="vc.name" disabled="disabled">
-				</div>
-			</div>
-			<div class="col-sm-3 hidden">
-				<div class="form-group">
-					<label for="sector" class="control-label">Project Sector</label>
-					<select id="sector" ng-model='d.vc.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
-				</div>
+				<label for="shortDesc" class="control-label">Description</label>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control" ng-model="vc.description" rows="4"></textarea>
 			</div>
 		</div>
-		<div class="row">
+
+		<div class="row form-group">
 			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="title" class="control-label">Title</label>
-					<input id="title" type="text" class="form-control input-sm" ng-model="vc.title">
-				</div>
+				<label for="shortDesc" class="control-label">Report Requirements</label>
+				<textarea id="shortDesc" type="text" class="form-control" ng-model="vc.reportRequirements" rows="4"></textarea>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Description</label>
-					<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.description" rows="4"></textarea>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.reportRequirements" rows="4"></textarea>
-				</div>
-			</div>
-		</div>
-		<div class="row">
+	
+		<!-- HIDDEN -->
+		<div class="hidden">
 			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="selectTopic(pillar)" id="pillar"
-					        ng-model='vc.pillar'
-							ng-options="pillar as pillar for pillar in pillars"
-							class="form-control input-sm">
-					</select>
-				</div>
-			</div>
-			<div class="col-sm-6 hidden">
 				<div class="form-group">
 					<label for="stage" class="control-label">Project Stage</label>
 					<select id="stage" ng-model='d.vc.stage' class="form-control input-sm" ng-options="stage as stage for stage in d.stages"></select>
 				</div>
 			</div>
-		</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="sector" class="control-label">Project Sector</label>
+					<select id="sector" ng-model='d.vc.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
+				</div>
+			</div>
+		</div><!-- / HIDDEN -->
 
 		<tmpl-artifact-display x-mode="'edit'" x-artifact="vc.artifact" x-project="project"></tmpl-artifact-display>
 		
