--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -1,6 +1,6 @@
 <div class="edit-valued-component-view">
 
-	<div class="view-title-container">
+	<div class="view-title-container flex-row">
 		<h1><span ng-show="project.name">Edit Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}}</h1>
 	</div>
 
