--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -7,7 +7,7 @@
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 	<div class="form-footer clearfix">
 		<div class="pull-right">
-			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
+			<a class="btn btn-default" ui-sref="p.artifact.view({artifactId:artifact._id})">Cancel</a>
 			<a class="btn btn-success" ng-click="submit()">Publish</a>
 		</div>
 	</div>
