--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -1,7 +1,7 @@
 <div class="project-comment-period-view">
 
 	<div class="view-title-container">
-		<h1><span>{{ project.name }}&nbsp;/&nbsp;</span>Comment Periods</h1>
+		<h1>Comment Periods</h1>
 	</div>
 
 	<div class="view-body-container">
