--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -1,7 +1,7 @@
 <div class="public-comment-period-view">
 
     <div class="view-title-container">
-        <h1>{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Period</h1>
+        <h1>Public Comment Period</h1>
     </div>
 
     <div class="view-body-container">
