--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -2,8 +2,10 @@
 
 	<!-- PUBLIC USERS (COMMON) -->
 	<div ng-show="!menu.authentication.user">
-		
-		<a class="project-home-link"><span class="glyphicon glyphicon-home"><span>{{project.name}}</span></a>
+
+		<a class="project-home-link" ui-sref="p.detail({projectid: menu.project.code})" title="Project Details">
+			<span class="glyphicon glyphicon-map-marker"></span><span>{{project.name}}</span>
+		</a>
 		
 		<ul class="nav nav-pills nav-stacked">
 			<li><a ui-sref="p.detail" href title="Project Details">Project Details</a></li>
